2023-06-13  Robby Stephenson  <robby@periapsis.org>

	* Added OPDS catalogs as a data source.

2023-05-29  Robby Stephenson  <robby@periapsis.org>

	* Added support for reading images from data URLs.

2023-05-12  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.

2023-05-07  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk data source (Bug 469441).

2023-04-29  Robby Stephenson  <robby@periapsis.org>

	* Updated Colnect data source to include video game collections.

2023-04-26  Robby Stephenson  <robby@periapsis.org>

	* Updated Colnect data source to include sports card collections.

2023-04-20  Robby Stephenson  <robby@periapsis.org>

	* Updated Colnect data source to include comic book collections.

2023-04-19  Robby Stephenson  <robby@periapsis.org>

	* Updated SRU and z39.50 server info for Library of Congress.

2023-03-11  Robby Stephenson  <robby@periapsis.org>

	* Added config option for link color (Bug 467150).

2023-03-09  Robby Stephenson  <robby@periapsis.org>

	* Added support for importing EPub data on drag/drop (Bug 450192).

2023-02-20  Robby Stephenson  <robby@periapsis.org>

	* Updated AMS MR Lookup data source.
	* Updated Dark Horse data source.
	* Updated KinoPoisk data source.
	* Updated IBS data source.

2023-02-18  Robby Stephenson  <robby@periapsis.org>

	* Added new report with Image Grid.
	* Added report with one entry per page (Bug 452552).

2023-02-05  Robby Stephenson  <robby@periapsis.org>

	* Added data source for iTunes music.

2023-02-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug when UI languages are empty (Bug 464102).

2023-01-21  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.6.
	* Fixed edit dialog resizing (Bug 462237).

2023-01-16  Robby Stephenson  <robby@periapsis.org>

	* Added data source for FilmAffinity.

2023-01-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with timing of multisource config read (Bug 461861).
