@@ -1,3 +1,7 @@
+2023-06-14  Robby Stephenson  <robby@periapsis.org>
+
+	* Added capability to remember entry template for custom collections based on file name.
+
 2023-06-13  Robby Stephenson  <robby@periapsis.org>
 
 	* Added OPDS catalogs as a data source.
